--- a/style.css
+++ b/style.css
@@ -2,9 +2,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
-
 
 /* header */
 
@@ -13,11 +12,25 @@
   width: 70px;
   height: 70px;
   padding: 10px 10px;
-  /* margin-left: 1rem; */
+  margin: 1rem;
+  animation-name: spin;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 a {
   color: #000;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 /* navabar */
@@ -60,14 +73,6 @@ a {
   color: black;
 }
 
-
-
-
-
-
-
-
-
 /* ****************************************** */
 /* call to action section */
 
@@ -100,22 +105,19 @@ a {
 
 .cta-heading-section h1 {
   padding: 40px;
-  font-size: 500%;
+  font-size: 600%;
+  font-weight: 800;
 }
 h1 .h1-color-change {
   color: #1221dc;
 }
-
-
-
-
 
 /*  */
 .cta-heading-section h3 {
   font-size: 150%;
   padding: 30px;
   margin: 20px;
-  color:rgb(99, 99, 99);
+  color: rgb(99, 99, 99);
 }
 
 .cta-btn {
@@ -128,60 +130,58 @@ h1 .h1-color-change {
 }
 /* our services */
 
-#Services{
+#service-container {
   background-color: #1221dc;
-  padding:2rem;
 }
-.service-heading{
+
+.service-heading {
   color: #fff;
   text-align: center;
   text-decoration: underline #fff dotted;
 }
-.service-flex-container{
-display: flex;
-justify-content: center;
-flex-direction: row;
-flex-wrap: wrap;
 
-}
-.service-box{
+.service-box {
   background-color: #fff;
-font-size: 16px;
-  width: 350px;
-  background-color: #fff;
- padding:3rem;
+  text-align: justify;
+  padding: 40px;
+  margin: 50px;
   border-radius: 12px;
-  margin: 2rem;
-
-  box-shadow: 3px 3px;
+  color: rgb(0, 0, 0);
+  transition: 2s;
 }
 
 .service-box:hover {
-  background-color: rgb(163, 168, 235);
+  background-color: rgb(12, 16, 32);
+  border-radius: 50px;
   color: #fff;
 }
-.service-btn {
-  
+.service-box h2 {
+  font-size: 16px;
   text-align: center;
- padding:10px;
- border-radius:5px;
- border: none;
-
+  text-decoration: underline solid;
+  padding: 12px;
 }
-.service-btn-link{
-  text-decoration: none;;
-  color:#1221dc;
+
+.service-btn {
+  text-align: center;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+}
+.service-btn-link {
+  text-decoration: none;
+  color: #1221dc;
 }
 /* ***************************************************** */
 
 /* +++++++++++++++++++++++++++++++our values+++++++++++ */
 
-.core-values{
-  margin: 1rem;;
- 
+.core-values {
+  margin: 1rem;
+
   text-align: center;
 }
-.core-values h1{
+.core-values h1 {
   display: inline-block;
   color: #1221dc;
   text-transform: uppercase;
@@ -190,13 +190,13 @@ font-size: 16px;
   padding-bottom: 10px;
   margin-top: 40px;
 }
-.cen{
+.cen {
   max-width: 1200px;
   margin: auto;
   overflow: hidden;
   padding: 20px;
 }
-.company-values{
+.company-values {
   display: inline-block;
   width: calc(100% / 3);
   margin: 0 -2px;
@@ -205,34 +205,38 @@ font-size: 16px;
   cursor: pointer;
   transition: 0.4s;
 }
-.company-values:hover{
+.company-values:hover {
   background: #ddd;
 }
-.company-values i{
+.company-values i {
   color: #1221dc;
   font-size: 34px;
   margin-bottom: 30px;
   transform-origin: 50% 50%;
-  animation: jump .5s linear alternate infinite;
+  animation: jump 0.5s linear alternate infinite;
 }
 
 /* icons animation */
 
 @keyframes jump {
-  0%   {transform: translate3d(0,0,0) scale3d(1,1,1);}
-  40%  {transform: translate3d(0,30%,0) scale3d(.7,1.5,1);}
-  100% {transform: translate3d(0,100%,0) scale3d(1.5,.7,1);}
+  0% {
+    transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
+  }
+  40% {
+    transform: translate3d(0, 30%, 0) scale3d(0.7, 1.5, 1);
+  }
+  100% {
+    transform: translate3d(0, 100%, 0) scale3d(1.5, 0.7, 1);
+  }
 }
 
-
-
-.company-values h2{
+.company-values h2 {
   font-size: 18px;
   text-transform: uppercase;
   font-weight: 500;
   margin: 0;
 }
-.company-values p{
+.company-values p {
   color: gray;
   font-size: 15px;
   font-weight: 500;
@@ -252,21 +256,21 @@ font-size: 16px;
   padding: 1rem;
   text-decoration: underline #fff dotted;
 }
-.container-3 {
+.work-container-3 {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 3fr));
   gap: 20px;
   background-color: #1221dc;
   padding: 3rem;
 }
-.container-3 img {
+.work-container-3 img {
   width: 100%;
   display: block;
   -webkit-filter: grayscale(1);
   filter: grayscale(1);
   transition: all 100ms ease-out;
 }
-.container-3 img:hover {
+.work-container-3 img:hover {
   transform: scale(1.04);
   -webkit-filter: grayscale(0);
   filter: grayscale(0);
@@ -288,44 +292,43 @@ font-size: 16px;
 /* ************************************* */
 
 /* about section */
-#about{
+#about {
   justify-content: space-between;
   align-content: center;
   min-height: 100vh;
   /* background-color: #f4f4f4; */
   display: grid;
   grid-template-columns: 1fr 1fr;
-  
+
   margin: 0 auto;
 }
-.image{
-  max-width:40vh;
+.image {
+  max-width: 40vh;
   margin: 0 auto;
-  border-radius:13px;
- 
+  border-radius: 13px;
 }
-.about-content{
-  margin-right: 2rem;;
-  background:#ffffff;
+.about-content {
+  margin-right: 2rem;
+  background: #ffffff;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
 }
-.about-content h2{
-  color:#1221dc;
+.about-content h2 {
+  color: #1221dc;
   text-transform: uppercase;
   font-size: 36px;
   letter-spacing: 6px;
   opacity: 0.9;
 }
-.about-content span{
+.about-content span {
   height: 0.5px;
   width: 80px;
   background: #777;
   margin: 30px 0;
 }
-.about-content p{
+.about-content p {
   padding-bottom: 15px;
   font-weight: 300;
   opacity: 0.7;
@@ -334,10 +337,10 @@ font-size: 16px;
   margin: 0 auto;
   line-height: 1.7;
 }
-.links{
+.links {
   margin: 15px 0;
 }
-.links li{
+.links li {
   border: 2px solid #000;
   list-style: none;
   border-radius: 5px;
@@ -345,18 +348,18 @@ font-size: 16px;
   width: 160px;
   text-align: center;
 }
-.links li a{
+.links li a {
   text-transform: uppercase;
   color: #777;
   text-decoration: none;
 }
-.links li:hover{
-  border-color: #1221dc
+.links li:hover {
+  border-color: #1221dc;
 }
-.links li:hover a{
-  color :#1221dc;
+.links li:hover a {
+  color: #1221dc;
 }
-.vertical-line{
+.vertical-line {
   height: 30px;
   width: 0.5px;
   background: #777;
@@ -397,7 +400,6 @@ font-size: 16px;
 }
 
 .flip-card-inner {
-  position: relative;
   width: 100%;
   height: 100%;
   text-align: center;
@@ -431,74 +433,70 @@ font-size: 16px;
 }
 .btn-6 {
   background-color: #fff;
-  color:#1221dc;
+  color: #1221dc;
 }
 /* ************************* */
 /* careers */
 
-.careers-heading{
-  text-align: center;
+.careers-heading {
   color: #1221dc;
-  text-decoration: underline #1221dc dotted;
-  margin: 3rem;
-}
-
-
-.careers-flex-container{
-  display: grid;
-  grid-template-columns:repeat(3,1fr);
-  gap:3rem;
-  margin: 2rem;;
- 
-
-  box-shadow:10x #000;
-}
-
-.careers-1{
-  background-color: #1221dc;
-color: #fff;
-width: 70%;
-padding: 2rem;
-border-radius: 12px;
-}
-.career-flex-btn{
+  margin: 20px;
   text-align: center;
-  padding:10px;
-  border-radius:5px;
-  border: none;
-  
+  text-decoration: underline #1221dc dotted;
 }
-.career-link{
-  text-decoration: none;;
-color:#1221dc;
-}
-/* ************************************************* */
 
+.careers-box {
+  background-color: #fff;
+  text-align: justify;
+  padding: 40px;
+  margin: 50px;
+  border-radius: 12px;
+  color: #1221dc;
+  transition: 1s;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 20px 25px;
+}
+
+.careers-box:hover {
+  background-color: #1221dc;
+  border-radius: 50px;
+  color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 25px;
+}
+.careers-box h2 {
+  font-size: 16px;
+  font-weight: 800;
+  text-align: center;
+  text-decoration: underline solid;
+  padding: 12px;
+}
+
+.apply-btn {
+  background-color: #020429;
+  color: rgb(255, 255, 255);
+}
+
+/* ************************************************* */
 
 /* contact section */
 
 .Contact-heading {
-  color:#1221dc;
+  color: #1221dc;
   text-align: center;
   padding: 1rem;
   text-decoration: underline #1221dc dotted;
 }
-.contact-container{
- 
-  
-  background: #fff;
+.contact-container {
+  background: #1221dc;
   border-radius: 6px;
   padding: 20px 60px 30px 40px;
-
 }
-.contact-container .contact-content{
+.contact-container .contact-content {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.contact-container .contact-content .left-side{
-
-width: 25%;
+.contact-container .contact-content .left-side {
+  width: 25%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -516,77 +514,72 @@ width: 25%;
   transform: translateY(-50%);
   background: #afafb6;
 } */
-.contact-content .left-side .details{
+.contact-content .left-side .details {
   margin: 20px;
   text-align: center;
-
 }
-.contact-content .left-side .details i{
+.contact-content .left-side .details i {
   font-size: 30px;
-  color: #1221dc;
+  color: #fff;
   margin-bottom: 10px;
 }
-.contact-content .left-side .details .topic{
+.contact-content .left-side .details .topic {
   font-size: 18px;
- 
 }
 .contact-content .left-side .details .text-one,
-.contact-content .left-side .details .text-two{
+.contact-content .left-side .details .text-two {
   font-size: 10px;
-  color: #09090c;
-  
+  color: #fff;
 }
 
-
-.contact-container .contact-content .right-side{
+.contact-container .contact-content .right-side {
   width: 105%;
   margin-left: 75px;
 }
-.contact-content .right-side .topic-text{
-
-  padding: 1rem;;
+.contact-content .right-side .topic-text {
+  padding: 1rem;
   font-size: 18px;
-  color: #1221dc;
+  color: #fff;
 }
-.right-side .input-box{
+.right-side .input-box {
   height: 50px;
   width: 100%;
-  margin: 1rem ;
+  margin: 1rem;
 }
 .right-side .input-box input,
-.right-side .input-box textarea{
+.right-side .input-box textarea {
   height: 100%;
   width: 100%;
   border: none;
   outline: none;
   font-size: 16px;
-  background: #F0F1F8;
+  background: #f0f1f8;
   border-radius: 6px;
   padding: 0 15px;
   resize: none;
 }
-.right-side .message-box{
+.right-side .message-box {
   min-height: 110px;
 }
-.right-side .input-box textarea{
+.right-side .input-box textarea {
   padding-top: 6px;
 }
-.right-side .button{
+.right-side .button {
   display: inline-block;
   margin-top: 12px;
 }
-.right-side .button input[type="button"]{
+.right-side .button input[type="button"] {
   color: #fff;
   font-size: 18px;
   outline: none;
   border: none;
   padding: 8px 16px;
   border-radius: 6px;
-  background: #1221dc;
+  background: #fff;
   cursor: pointer;
   transition: all 0.3s ease;
 }
-.button input[type="button"]:hover{
+.button input[type="button"]:hover {
   background: #4f5492;
 }
 
@@ -594,82 +587,82 @@ width: 25%;
 
 /* footer */
 
-.footer-container{
-	max-width: 1170px;
-	margin:auto;
+.footer-container {
+  max-width: 1170px;
+  margin: auto;
 }
-.footer-row{
-	display: flex;
-	flex-wrap: wrap;
+.footer-row {
+  display: flex;
+  flex-wrap: wrap;
 }
-ul{
-	list-style: none;
+ul {
+  list-style: none;
 }
-.footer{
-	background-color: #1221dc;
-    padding: 70px 0;
+.footer {
+  background-color: #fff;
+
+  padding: 70px 0;
 }
-.footer-col{
-   width: 25%;
-   padding: 0 15px;
+.footer-col {
+  width: 25%;
+  padding: 0 15px;
 }
-.footer-col h4{
-	font-size: 18px;
-	color: #ffffff;
-	text-transform: capitalize;
-	margin-bottom: 35px;
-	font-weight: 500;
-	position: relative;
+.footer-col h4 {
+  font-size: 18px;
+  color: #1221dc;
+  text-transform: capitalize;
+  margin-bottom: 35px;
+  font-weight: 700;
+  position: relative;
 }
-.footer-col h4::before{
-	content: '';
-	position: absolute;
-	left:0;
-	bottom: -10px;
-	background-color: #fff;
-	height: 2px;
-	box-sizing: border-box;
-	width: 50px;
+.footer-col h4::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  background-color: #1221dc;
+  height: 2px;
+  box-sizing: border-box;
+  width: 50px;
 }
-.footer-col ul li:not(:last-child){
-	margin-bottom: 10px;
+.footer-col ul li:not(:last-child) {
+  margin-bottom: 10px;
 }
-.footer-col ul li a{
-	font-size: 16px;
-	text-transform: capitalize;
-	color: #ffffff;
-	text-decoration: none;
-	font-weight: 300;
-	color: #bbbbbb;
-	display: block;
-	transition: all 0.3s ease;
+.footer-col ul li a {
+  font-size: 16px;
+  text-transform: capitalize;
+  color: #1221dc;
+  text-decoration: none;
+  font-weight: 300;
+  color: #1221dc;
+  display: block;
+  transition: all 0.3s ease;
 }
-.footer-col ul li a:hover{
-	color: #ffffff;
-	padding-left: 8px;
+.footer-col ul li a:hover {
+  color: #1221dc;
+  padding-left: 8px;
 }
-.footer-col .social-links a{
-	display: inline-block;
-	height: 40px;
-	width: 40px;
-	background-color: rgba(255,255,255,0.2);
-	margin:0 10px 10px 0;
-	text-align: center;
-	line-height: 40px;
-	border-radius: 50%;
-	color: #ffffff;
-	transition: all 0.5s ease;
+.footer-col .social-links a {
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  background-color: rgba(255, 255, 255, 0.2);
+  margin: 0 10px 10px 0;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: #1221dc;
+  transition: all 0.5s ease;
 }
-.footer-col .social-links a:hover{
-	color: #24262b;
-	background-color: #ffffff;
+.footer-col .social-links a:hover {
+  color: #24262b;
+  background-color: #1221dc;
 }
 /* map section */
 
-
-.footer-bottom{
- text-align: center;
+.footer-bottom {
+  text-align: center;
   padding: 1rem;
   background-color: #1221dc;
-  color:#fff;
+  color: #fff;
 }
